--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             background-position: center;
         }
         .early-years {
-            background-image: url('early_years.jpg'); /* Replace with the path to your image */
+            background-image: url('images/early_years.jpg'); /* Replace with the path to your image */
         }
         .global-expansion {
-            background-image: url('global_expansion.jpg'); /* Replace with the path to your image */
+            background-image: url('images/global_expansion.jpg'); /* Replace with the path to your image */
         }
         .dominant-teams {
-            background-image: url('dominant_teams.jpg'); /* Replace with the path to your image */
+            background-image: url('images/dominant_teams.jpg'); /* Replace with the path to your image */
         }
         .section-wrapper {
             position: relative;
@@ -114,7 +114,7 @@
         <p>Die Einführung der Budgetobergrenze zielt darauf ab, die Kosten zu kontrollieren und den Wettbewerb in der Formel 1 zu verbessern. Es soll dafür sorgen, dass finanzielle Ressourcen nicht der einzige entscheidende Faktor für den Erfolg eines Teams sind, sondern dass auch technisches Können und strategisches Geschick eine größere Rolle spielen können.</p>
         <p>Diese Maßnahme soll langfristig zu einem ausgeglicheneren und spannenderen Wettkampf führen, bei dem mehr Teams die Chance haben, um Siege und Titel zu kämpfen, was letztlich sowohl den Sport als auch die Fans profitieren lässt.</p>
         <div style="text-align: center;">
-            <img src="f1_team_budgets.png" alt="Entwicklung der Teambudgets in der Formel 1">
+            <img src="images/f1_team_budgets.png" alt="Entwicklung der Teambudgets in der Formel 1">
         </div>
         <p>Die Grafik zeigt die Veränderung der Budgets des Teams Jordan (später Midland, Spyker und Force India) in der Formel 1 von 1993 bis 2016. Der Chart verdeutlicht einen signifikanten Anstieg der Budgets über die Jahre hinweg.</p>
 
@@ -134,7 +134,7 @@
         <h2>Dominante Teams: Triumph und Technologie</h2>
         <p>Ein weiteres faszinierendes Kapitel in der Geschichte der Formel 1 ist die Dominanz bestimmter Teams in verschiedenen Dekaden. Diese Dominanz wurde oft durch herausragende Fahrer und innovative Technik unterstützt. Die folgende Grafik illustriert die dominanten Teams pro Dekade und zeigt die Anzahl ihrer Siege in dieser Zeit:</p>
         <div style="text-align: center;">
-            <img src="dominante_teams.png" alt="Dominante Teams pro Dekade in der Formel 1">
+            <img src="images/dominante_teams.png" alt="Dominante Teams pro Dekade in der Formel 1">
         </div>
         <h3>Dominante Teams pro Dekade</h3>
         <ul>
